made it compatible with java 11